# Philosophers

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: philo.h
philo/: Makefile  philo
philo/include/: philo.h
philo/src/: death_monitor.c  fork_control.c  free.c  init_config.c  init_structs.c  main.c  parse_utils.c  philosopher_threads.c  time.c
src/: death_monitor.c  fork_control.c  main.c  parse_args.c  parse_utils.c  philosopher_threads.c
